レイアウト改善する #11 (#15)

--- a/config/locales/view.ja.yml
+++ b/config/locales/view.ja.yml
@@ -21,5 +21,15 @@ ja:
       btn:
         edit: この寄せ書きを編集する
         destroy: この寄せ書きを削除する
+        new_message: メッセージを追加する
     edit:
       title: 寄せ書きを修正
+  messages:
+    index:
+      title: メッセージ
+    new:
+      title: メッセージを追加
+    show:
+      title: メッセージ
+    edit:
+      title: メッセージを修正
